--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-transparent">
 <meta name="apple-mobile-web-app-title" content="シャニマス">
 <link rel="apple-touch-icon" href="https://shinycolors.enza.fun/assets/images/icon/icon_512.png">
 <script>
